modified_hamburger-effect

--- a/Hamburger-Lesson/css/style.css
+++ b/Hamburger-Lesson/css/style.css
@@ -32,26 +32,26 @@ h1{
   top: 20px;
   z-index: 10;
 }
- 
+
 .menu-trigger,
 .menu-trigger span {
   display: inline-block;
   transition: all .4s;
   box-sizing: border-box;
 }
- 
+
 .menu-trigger {
   position: relative;
   width: 50px;
   height: 44px;
 }
- 
+
 .menu-trigger span {
   position: absolute;
   left: 0;
   width: 100%;
   height: 4px;
-  background-color: #000;
+  background-color: blue;
   border-radius: 4px;
 }
  
@@ -68,21 +68,16 @@ h1{
 }
  
 .menu-trigger.active span:nth-of-type(1) {
-  -webkit-transform: translateY(20px) rotate(-45deg);
-  transform: translateY(20px) rotate(-45deg);
-  background-color: #fff;
+  -webkit-transform: translateY(20px) rotate(-315deg);
+  transform: translateY(20px) rotate(-315deg);
 }
- 
 .menu-trigger.active span:nth-of-type(2) {
   opacity: 0;
 }
- 
 .menu-trigger.active span:nth-of-type(3) {
-  -webkit-transform: translateY(-20px) rotate(45deg);
-  transform: translateY(-20px) rotate(45deg);
-  background-color: #fff;
+  -webkit-transform: translateY(-20px) rotate(315deg);
+  transform: translateY(-20px) rotate(315deg);
 }
- 
  
 /* ------------------------ */
 /* ------ spメニュー ------ */
